...
          ),

          const SizedBox(width: 4),

          // 2. Ícone Perfil
          IconButton(
            key: const ValueKey('profile_appbar_button'),
            icon: const Icon(Icons.person),
            color: selectedScreen == 'profile'
                ? AppColors.primary
                : AppColors.secondary,
            tooltip: 'Meu Perfil',
            onPressed: () {
...
