...
                elevation: 2,
              ),
              onPressed: authState.isLoading ? null : _doLogin,
              child: authState.isLoading
                  ? const CircularProgressIndicator(color: Colors.white)
                  : const Text(
                      'ENTRAR',
                      style: TextStyle(
                        color: AppColors.background,
                        fontWeight: FontWeight.bold,
                        fontSize: 16,
                      ),
                    ),
...
